[gd_scene load_steps=3 format=2]

[ext_resource path="res://models/Turret03/baseturret03.dae" type="PackedScene" id=1]
[ext_resource path="res://scripts/turret03animation.gd" type="Script" id=2]

[node name="Node" type="Node"]

[node name="Spatial" type="Spatial" parent="." index="0"]

[node name="Camera" type="Camera" parent="Spatial" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.01496 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0

[node name="Scene Root" parent="Spatial" index="1" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="AnimationPlayer" parent="Spatial/Scene Root" index="1"]

_sections_unfolded = [ "Playback Options" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Control" type="Control" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Button" type="Button" parent="CanvasLayer/Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 30.0
margin_right = 140.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1

[connection signal="animation_finished" from="Spatial/Scene Root/AnimationPlayer" to="Spatial/Scene Root" method="_on_AnimationPlayer_animation_finished"]

[connection signal="animation_started" from="Spatial/Scene Root/AnimationPlayer" to="Spatial/Scene Root" method="_on_AnimationPlayer_animation_started"]

[connection signal="pressed" from="CanvasLayer/Control/Button" to="Spatial/Scene Root" method="_on_Button_pressed"]


[editable path="Spatial/Scene Root"]
